--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend of the AR blogs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon --watch src --exec ts-node src/index.ts"
   },
   "repository": {
@@ -26,8 +26,13 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.15",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.0.4",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.3",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
